[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/test-objects/Guns/Gun.gd" type="Script" id=1]
[ext_resource path="res://src/objects/test-objects/Guns/Bullets/PistolBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/test-objects/Guns/Canon/canon.png" type="Texture" id=3]

[node name="Canon" type="Node2D"]
script = ExtResource( 1 )
bullet_scene = ExtResource( 2 )
shoot_rate = 0.2

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 8.1704, 0 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
